--- a/dist.ini
+++ b/dist.ini
@@ -25,6 +25,9 @@ copyright_year = 2011
 [AutoPrereqs]
 [MetaJSON]
 
+[Prereqs / TestRequires]
+Test::Requires = 0
+
 [MetaResources]
 bugtracker.web  = http://github.com/beanz/device-current-cost-perl/issues
 repository.url  = git://github.com/beanz/device-current-cost-perl.git
