Import of BEANZ/Device-CurrentCost-1.112970 from CPAN.
gitpan-cpan-distribution: Device-CurrentCost
gitpan-cpan-version:      1.112970
gitpan-cpan-path:         BEANZ/Device-CurrentCost-1.112970.tar.gz
gitpan-cpan-author:       BEANZ
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -30,6 +30,6 @@ requires:
   Time::HiRes: 0
   constant: 0
 resources:
-  bugtracker: http://github.com/beanz/device-current-cost-perl/issues
+  bugtracker: https://github.com/beanz/device-current-cost-perl/issues
   repository: git://github.com/beanz/device-current-cost-perl.git
-version: 1.110792
+version: 1.112970
