--- a/META.yml
+++ b/META.yml
@@ -3,16 +3,15 @@ abstract: 'Perl modules for Current Cost energy monitors'
 author:
   - 'Mark Hindess <soft-cpan@temporalanomaly.com>'
 build_requires:
-  English: 0
   IO::Pipe: 0
   Test::More: 0
   Test::Requires: 0
   Test::SharedFork: 0
   Test::Warn: 0
 configure_requires:
-  ExtUtils::MakeMaker: 6.31
+  ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.200004, CPAN::Meta::Converter version 2.101670'
+generated_by: 'Dist::Zilla version 4.300028, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -20,16 +19,19 @@ meta-spec:
 name: Device-CurrentCost
 requires:
   Carp: 0
+  Device::SerialPort: 0
   Fcntl: 0
   Getopt::Long: 0
   IO::Handle: 0
   IO::Select: 0
   List::Util: 0
-  POSIX: 0
   Pod::Usage: 0
+  Symbol: 0
   Time::HiRes: 0
   constant: 0
+  strict: 0
+  warnings: 0
 resources:
   bugtracker: https://github.com/beanz/device-current-cost-perl/issues
   repository: git://github.com/beanz/device-current-cost-perl.git
-version: 1.112970
+version: 1.130190
