Import of BEANZ/Device-CurrentCost-1.142220 from CPAN.
gitpan-cpan-distribution: Device-CurrentCost
gitpan-cpan-version:      1.142220
gitpan-cpan-path:         BEANZ/Device-CurrentCost-1.142220.tar.gz
gitpan-cpan-author:       BEANZ
gitpan-cpan-maturity:     released

--- a/debian/control
+++ b/debian/control
@@ -11,5 +11,6 @@ Homepage: http://search.cpan.org/dist/Device-CurrentCost/
 Package: libdevice-currentcost-perl
 Architecture: all
 Depends: ${perl:Depends}, ${misc:Depends}
+Breaks: libanyevent-currentcost-perl (<< 1.130190-1)
 Description: Device::CurrentCost Perl Module
  Low-level API for reading from Current Cost energy meters.
