--- a/dist.ini
+++ b/dist.ini
@@ -2,7 +2,7 @@ name    = Device-CurrentCost
 author = Mark Hindess <soft-cpan@temporalanomaly.com>
 license =  Perl_5
 copyright_holder = Mark Hindess
-copyright_year = 2011
+copyright_year = 2014
 
 [Git::Check]
 [Git::Commit]
@@ -17,6 +17,14 @@ copyright_year = 2011
 [@Filter]
 -bundle = @Basic
 -remove = Readme
+-remove = GatherDir
+-remove = PruneCruft
+
+[GatherDir]
+include_dotfiles = 1
+
+[PruneCruft]
+except = \.travis.yml
 
 [NextRelease]
 [AutoVersion]
@@ -25,7 +33,7 @@ copyright_year = 2011
 [Test::Perl::Critic]
 [Test::EOL]
 [Test::Kwalitee]
-[NoTabsTests]
+[Test::NoTabs]
 [PodCoverageTests]
 [Test::Pod::LinkCheck]
 [Test::Pod::No404s]
@@ -37,6 +45,11 @@ copyright_year = 2011
 
 [Prereqs / TestRequires]
 Test::Requires = 0
+Test::SharedFork = 0
+; authordep Test::NoTabs
+; authordep Test::Perl::Critic
+; authordep Pod::Coverage::TrustPod
+; authordep Test::Pod::Coverage
 
 [GitHub::Meta]
   repo = device-current-cost-perl
