--- a/META.yml
+++ b/META.yml
@@ -3,6 +3,8 @@ abstract: 'Perl modules for Current Cost energy monitors'
 author:
   - 'Mark Hindess <soft-cpan@temporalanomaly.com>'
 build_requires:
+  ExtUtils::MakeMaker: '0'
+  File::Spec: '0'
   IO::Pipe: '0'
   Test::More: '0'
   Test::Requires: '0'
@@ -35,4 +37,4 @@ requires:
 resources:
   bugtracker: https://github.com/beanz/device-current-cost-perl/issues
   repository: git://github.com/beanz/device-current-cost-perl.git
-version: '1.142220'
+version: '1.142230'
